--- a/src/public/style.css
+++ b/src/public/style.css
@@ -22,6 +22,8 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
+  top: 0;
+  right: 0;
   width: 100%;
   padding: 40px;
   box-sizing: border-box;
